INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

MACRO (BUILD_FCPPT_EXAMPLE example)
	ADD_EXECUTABLE (mizuiro${example}example ${example}.cpp)
ENDMACRO()

BUILD_FCPPT_EXAMPLE(algorithm)
BUILD_FCPPT_EXAMPLE(convert)
BUILD_FCPPT_EXAMPLE(convert_view)
BUILD_FCPPT_EXAMPLE(flipped_view)
BUILD_FCPPT_EXAMPLE(gray)
BUILD_FCPPT_EXAMPLE(hsv)
BUILD_FCPPT_EXAMPLE(image)
BUILD_FCPPT_EXAMPLE(init)
BUILD_FCPPT_EXAMPLE(operators)
BUILD_FCPPT_EXAMPLE(sub_view)
BUILD_FCPPT_EXAMPLE(raw_view)
BUILD_FCPPT_EXAMPLE(raw_sub_view)
